# hlab-nxo-setup

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  INSTALL_ROS.md  README.md  install_RTP.sh  opennextage_kazuki.sh  rtm_entrypoint.sh  setup_choreonoid.sh  setup_choreonoid_master.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  graspPlugin_integrity.yml  openrtp_deployment_test.yml
eclipse-workspace/: launch_RTC_hlab (copy).xml  launch_RTC_hlab.xml  launch_RTC_hlab_minimal.xml
eclipse-workspace/RTSE_Files/: .project
overlay_ws/: .rosinstall  noetic.rosinstall  setup_rtmros_ws.sh
overlay_ws/src/: initPos.patch
overlay_ws/src/grasp_plugin_meta/: CMakeLists.txt  package.xml
overlay_ws/src/nextage_bringup_hlab/: CMakeLists.txt  package.xml
