<?xml version="1.0"?>
<package>
  <name>grasp_plugin-meta</name>
  <version>2.2.0</version>
  <description>
  The metapackage for Harada Lab's nextage platforms.
  </description> 

  <maintainer email="maleicacid824+dev@gmail.com">Kazuki Kuroda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>glut</depend>
  <depend>libglew-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>openrtm_tools</depend>
  <depend>pcl_ros</depend>
  <depend>gettext-base</depend>

  <export>
    <metapackage/>
  </export>
</package>
