<?xml version="1.0"?>
<package>
  <name>grasp_plugin-meta</name>
  <version>2.2.0</version>
  <description>
  The metapackage for Harada Lab's nextage platforms.
  </description> 

  <maintainer email="maleicacid824+dev@gmail.com">Kazuki Kuroda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>glut</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>openrtm_tools</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libqt5x11extras5-dev</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
